fix: subject alignment on android

--- a/css/main.css
+++ b/css/main.css
@@ -41,23 +41,23 @@ See the LICENSE file in the project root for details. */
   ); /* original: #49A2D5 */
   --status-bar-accent-color: #49a2d5;
   --main-font-family:
-    'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', sans-serif;
+    "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", sans-serif;
   --alt-font-family:
-    'SF Pro Rounded', 'Noto Sans Rounded', 'Roboto Rounded',
-    'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari,
-    'Arial Rounded MT Bold', 'Arial Rounded MT', Calibri, 'Source Sans Pro',
+    "SF Pro Rounded", "Noto Sans Rounded", "Roboto Rounded",
+    "Hiragino Maru Gothic ProN", Quicksand, Comfortaa, Manjari,
+    "Arial Rounded MT Bold", "Arial Rounded MT", Calibri, "Source Sans Pro",
     sans-serif;
   --ios-font-family:
-    'SF Pro Rounded', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
+    "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
   --monospace-font-family:
-    'JetBrainsMono Nerd Font Mono', 'JetBrains Mono', 'Fira Code', 'Menlo',
-    'Consolas', 'Monaco', monospace;
+    "JetBrainsMono Nerd Font Mono", "JetBrains Mono", "Fira Code", "Menlo",
+    "Consolas", "Monaco", monospace;
   --system-font-family:
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', system-iui, Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --android-font-family: 'Noto Sans JP', 'Noto', 'Roboto', sans-serif;
+    -apple-system, BlinkMacSystemFont, "Segoe UI", system-iui, Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --android-font-family: "Noto Sans JP", "Noto", "Roboto", sans-serif;
   --label-font-color: #8e8e93; /* replace with JS depending on subject category */
   --label-background-color: rgba(
     44,
@@ -147,8 +147,8 @@ See the LICENSE file in the project root for details. */
   --android-line-height-furigana: 0.8125rem; /* ~13px */
   /* macOS Code Typography Scale */
   --mac-code-font-family:
-    ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
-    'DejaVu Sans Mono', monospace;
+    ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
+    "DejaVu Sans Mono", monospace;
   --mac-code-font-size-large: 1rem; /* ~16px / 16 For larger blocks, headings */
   --mac-code-line-height-large: 1.5rem; /* ~24px / 16 */
   --mac-code-font-size-medium: 0.875rem; /* ~14px / 16 For most inline code, smaller blocks */
@@ -157,7 +157,7 @@ See the LICENSE file in the project root for details. */
   --mac-code-line-height-small: 1rem; /* ~16px / 16 */
   /* iOS Code Typography Scale */
   --ios-code-font-family:
-    'SF Mono', ui-monospace, Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+    "SF Mono", ui-monospace, Menlo, Consolas, "DejaVu Sans Mono", monospace;
   --ios-code-font-size-large: 1rem; /* ~16px / 16 For larger blocks, headings */
   --ios-code-line-height-large: 1.5rem; /* ~24px / 16 */
   --ios-code-font-size-medium: 0.875rem; /* ~14px / 16 For most inline code, smaller blocks */
@@ -166,7 +166,7 @@ See the LICENSE file in the project root for details. */
   --ios-code-line-height-small: 1rem; /* ~16px / 16 */
   /* Android Code Typography Scale */
   --android-code-font-family:
-    'Roboto Mono', 'Cascadia Code', 'Source Code Pro', 'DejaVu Sans Mono',
+    "Roboto Mono", "Cascadia Code", "Source Code Pro", "DejaVu Sans Mono",
     monospace;
   --android-code-font-size-large: 1rem; /* ~16px / 16 For larger blocks, headings */
   --android-code-line-height-large: 1.5rem; /* ~24px / 16 */
@@ -615,6 +615,10 @@ pre code.hljs {
   align-self: baseline;
 }
 
+.android #flashcard-subject {
+  align-self: center; /* fix uneven alignment */
+}
+
 /* label */
 .subject-label {
   color: var(--label-font-color);
@@ -819,7 +823,7 @@ pre code.hljs {
 }
 
 #source-text:empty::before {
-  content: 'n/a';
+  content: "n/a";
 }
 
 #source-text {
@@ -1112,11 +1116,6 @@ header,
   white-space: nowrap;
   flex-shrink: 0;
   margin-bottom: 1.1875rem;
-}
-
-#flashcard-subject {
-  display: inline-block;
-  align-self: baseline;
 }
 
 #flashcard-container {
